+ added a group class for document objects and its view provider
+ added PropertyPartShape to save/load shapes to/from a document
+ rename document member in SoFCSelection after a document has been renamed
+ Prepared for OCC 6.1: The modules 'AppMesh', 'AppPartGui', 'AppRaytracing' and 'AppRaytracingGui' need the module 'TKMesh.lib'
+ Added a method to XMLReader to get unsigned long from a string
+ Make several methods of BaseView const
+ Bug fixed in TreeView
+ Added new action classes for en/disabling selection and highlighting with their colors
+ Bug fixed when opening a project with the same file name
+ RFE 1450472 Clear selection of active document only
+ SoFCMeshOpenEdge shape node added to render the open edges of a mesh
+ print some information in Attach() and Detach() in Observer in debug mode
+ delete command objects when application is exiting
+ bug fixed in 'Refresh' command
+ active view stuff fixed
+ proper handling of double clicks with wheel button
+ Random color implemented
+ Box zoom implementation started

Version: V0.5B8 Date: Tue Aug 01 21:53:34 2006 +++++++++++++++++++++++++++++++
+ PropertyFile added and editor implemented
+ Check whether a project file is already open and throw an exception
+ Allow to open a project file even if not everything can be loaded e.g. if a module is missing
+ Select name if a file instead of directory was given in FileDialog's getOpenFileName() or getSaveFileName() methods
+ Bug fixed in harmonizing normals of a mesh
+ speed up a lot several algorithms that searches for independant components of a mesh or searches for inhomogenous normals
+ make MeshKernel::VisitNeighbourFacets() more robust against topologic errors in mesh
+ Option added to do one- or two-side rendering of meshes
+ Dialog to enter numbers higher than the maximum of int's, i.e numbers up to 4294967295
+ Bug 1449428 (Crash when output to console too long) fixed by replacing vsprintf by vsnprint